[package]
name = "awesome-labels"
version = "0.1.0"
authors = ["Daijiro Chiba <chiba_daijiro@cyberagent.co.jp>"]
edition = "2018"

[[bin]]
name = "awesome-labels-runner"
path = "src/bin/runner/main.rs"

[dependencies]
base64 = "0.10"
github-rs = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hyper = "0.12.29"
regex = "1"
reqwest = "0.9"
url = "1.7"
